@@ -213,6 +213,9 @@ Bug Fixes
 * SOLR-5643: ConcurrentUpdateSolrServer will sometimes not spawn a new Runner
   thread even though there are updates in the queue. (Mark Miller)
 
+* SOLR-5650: When a replica becomes a leader, only peer sync with other replicas
+  that last published an ACTIVE state. (Mark Miller)
+
 Optimizations
 ----------------------
 
